--- a/src/styles/components/cards/PostCard/PostSpaces.module.scss
+++ b/src/styles/components/cards/PostCard/PostSpaces.module.scss
@@ -1,7 +1,6 @@
 @import '@styles/Variables';
 
 .wrapper {
-    overflow: hidden;
     > p {
         flex-shrink: 0;
     }
